package heig.mcr.visitor.actor;

public interface Interactor extends Positionable {

    void interactWith(Interactable other);
}
